--- a/src/styl/modules/accordion.styl
+++ b/src/styl/modules/accordion.styl
@@ -4,6 +4,8 @@
     padding .7rem 0
     cursor pointer
     line-height 1.6em
+    color color-heading
+    font-weight 500
     & > i
       width 1rem
       display inline-block
@@ -18,6 +20,7 @@
   & > .content
     line-height 1.6rem
     display none
+    color color-light-grey
     &.open
       display block
     & + .title
