--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -29,7 +29,7 @@ color-grey = #69798F
 color-black = #000
 color-primary = primary-color
 color-ash = #2F3133
-color-smoke = #eaedf1
+color-smoke = #e3e7eb
 color-light-grey = #59687b
 color-heading = #1c2a40
 
@@ -42,7 +42,7 @@ background-light-grey = lighten(color-smoke, 20%)
 background-lighter-grey = lighten(color-smoke, 60%)
 background-lightest-grey = lighten(color-smoke, 75%)
 
-border-grey = background-light-grey
+border-grey = color-smoke
 border-info = lighten(color-blue, 10%)
 border-warning = lighten(color-yellow, 10%)
 border-important = lighten(color-red, 10%)
