--- a/src/styl/modules/stages.styl
+++ b/src/styl/modules/stages.styl
@@ -41,7 +41,7 @@
       display block
       font-weight 500
       font-size 1rem
-      color text-grey
+      color color-heading
     &:last-child
       &:before, &:after
         display none
