--- a/src/styl/modules/accordion.styl
+++ b/src/styl/modules/accordion.styl
@@ -7,16 +7,18 @@
     color color-heading
     font-weight 500
     & > i
-      width 1rem
+      width 1.3rem
       display inline-block
       height 1px
       &::before
-        content '\f0da'
-        font normal normal normal 1em/1 FontAwesome
+        content '\f125'
+        font normal normal normal .74rem Ionicons
+        color link-light
     &.open
       i::before
-        content '\f0d7'
-        font normal normal normal 1em/1 FontAwesome
+        content '\f123'
+        font normal normal normal .74rem Ionicons
+        color link-light
   & > .content
     line-height 1.6rem
     display none
