--- a/src/styl/modules/ui.styl
+++ b/src/styl/modules/ui.styl
@@ -38,11 +38,8 @@ a
 p
   line-height 1.6em
 
-b
-  font-weight 700
+b, strong, .strong
+  font-weight 600
 
 small
-  font-size .86rem
-
-strong
-  font-weight 700
+  font-size font-size-small
