--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -1,4 +1,6 @@
 //Typography
+font-size-hero = 1.2em
+font-size-small = .86em
 font-size-standard = 16px
 font-size-h1 = 3.8em
 font-size-h2 = 2.4em
@@ -6,7 +8,7 @@ font-size-h3 = 2em
 font-size-h4 = 1.6em
 font-size-h5 = 1.4em
 font-size-h6 = 1.2em
-font-size-hero = 1.2em
+
 font-family-standard = -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 font-family-code = 'Roboto Mono', 'Consolas', 'Monaco', 'Lucida Console', monospace
 
@@ -15,23 +17,22 @@ primary-color = #435ce2
 primary-white = #fff
 primary-black = #000
 
+color-heading = #1c2a40
 color-red = #ff2d2d
-color-orange = #ffa717
+color-orange = #ff8f17
 color-yellow = #ffbd00
-color-green = #00c357
+color-green = #01bc67
 color-teal = #00b1a1
 color-blue = #1d7aff
 color-violet = #af00e8
 color-purple = #670ef5
 color-pink = #fb0c92
 color-brown = #ab5b33
-color-grey = #69798F
+color-grey = #53565a
 color-black = #000
 color-primary = primary-color
-color-ash = #2F3133
+color-ash = #6b6c6e
 color-smoke = #e3e7eb
-color-light-grey = #59687b
-color-heading = #1c2a40
 
 background-info = lighten(color-blue, 92%)
 background-warning = lighten(color-yellow, 92%)
@@ -61,12 +62,12 @@ text-button-pink = primary-white
 text-button-brown = primary-white
 text-button-grey = primary-white
 text-button-black = primary-white
-text-button-default = #505050
+text-button-default = darken(color-grey, 20%)
 
-hover-text-button-default = darken(#505050, 20%)
+hover-text-button-default = darken(color-grey, 40%)
 
-link-light = lighten(color-light-grey, 15%)
-link-light-hover = darken(color-light-grey, 20%)
+link-light = lighten(color-grey, 15%)
+link-light-hover = darken(color-grey, 20%)
 
 text-grey = darken(color-grey, 28%)
 text-info = darken(color-blue, 65%)
