--- a/src/styl/modules/buttons.styl
+++ b/src/styl/modules/buttons.styl
@@ -6,11 +6,11 @@
   color text-button-default
   background-color background-light-grey
   outline 0
-  padding 0 1.8em
+  padding .5em 1.8em
   text-align center
   border 0
   height em-height
-  line-height 2.7em
+  line-height 1.6em
   font-size font-size-standard
   font-weight 500
   cursor pointer
@@ -44,7 +44,7 @@
         btn-color(clr)
         btn-background-hover(clr)
   &.labeled
-    padding 0 1.8rem 0 4.2rem
+    padding .5em 1.8em .5em 4.2em
     i
       absolute top left
       width 2.8rem
@@ -55,7 +55,7 @@
       font-size 1rem
       line-height em-height
     &.labeled-right
-      padding 0 4.2rem 0 1.8rem
+      padding .5em 4.2rem .5em 1.8rem
       i
         absolute top right
         left auto
