--- a/src/styl/modules/cards.styl
+++ b/src/styl/modules/cards.styl
@@ -45,7 +45,7 @@
       padding 1rem 1.4rem
       color color-light-grey
       border-top 1px solid lighten(border-grey, 25%)
-      font-size .86rem
+      font-size font-size-small
       &.button
         padding 0
         text-align center
