--- a/src/styl/modules/progress.styl
+++ b/src/styl/modules/progress.styl
@@ -13,8 +13,8 @@
     .status
       color #fff
       absolute right .6rem
-      font-size .86rem
-      line-height 1.74rem
+      font-size font-size-small
+      line-height 1.6rem
       font-weight 700
       display none
   &.tiny
@@ -24,7 +24,7 @@
   &.large
     height 2.7rem
     .status
-      line-height 2.7rem
+      line-height 2.6rem
       font-size 1rem
   &:not(.tiny):not(.small)
     .bar.show
