--- a/src/styl/modules/accordion.styl
+++ b/src/styl/modules/accordion.styl
@@ -22,7 +22,7 @@
   & > .content
     line-height 1.6rem
     display none
-    color color-light-grey
+    color text-default
     &.open
       display block
     & + .title
@@ -36,7 +36,7 @@
       padding 1.3rem 1.3rem
       border-top 1px solid border-grey
       font-weight 600
-      color text-grey
+      color color-heading
       line-height 1.4rem
       &:first-child
         border none
