--- a/src/styl/modules/breakpoints.styl
+++ b/src/styl/modules/breakpoints.styl
@@ -45,59 +45,59 @@
     +below('xs')
       stack()
       margin 0 !important
-      padding 0 !important
+      padding 0
     &able > *
       +below('xs')
         stack()
         margin 0 !important
-        padding 0 !important
+        padding 0
   &s-stack
     +below('s')
       stack()
       margin 0 !important
-      padding 0 !important
+      padding 0
     &able > *
       +below('s')
         stack()
         margin 0 !important
-        padding 0 !important
+        padding 0
   &m-stack
     +below('m')
       stack()
       margin 0 !important
-      padding 0 !important
+      padding 0
     &able > *
       +below('m')
         stack()
         margin 0 !important
-        padding 0 !important
+        padding 0
   &l-stack
     +below('l')
       stack()
       margin 0 !important
-      padding 0 !important
+      padding 0
     &able > *
       +below('l')
         stack()
         margin 0 !important
-        padding 0 !important
+        padding 0
   &xl-stack
     +below('xl')
       stack()
       margin 0 !important
-      padding 0 !important
+      padding 0
     &able > *
       +below('xl')
         stack()
         margin 0 !important
-        padding 0 !important
+        padding 0
   &xxl-stack
     +below('xxl')
       stack()
       margin 0 !important
-      padding 0 !important
+      padding 0
     &able > *
       +below('xxl')
         stack()
         margin 0 !important
-        padding 0 !important
+        padding 0
