--- a/src/styl/modules/buttons.styl
+++ b/src/styl/modules/buttons.styl
@@ -6,17 +6,16 @@
   color text-button-default
   background-color background-light-grey
   outline 0
-  padding .5em 1.8em
+  padding .75em 1.8em
   text-align center
   border 0
-  height em-height
-  line-height 1.6em
+  line-height 1.125
   font-size font-size-standard
   font-weight 500
   cursor pointer
   transition all 0.2s ease
   vertical-align top
-  for size in ('small' 'medium' 'large' 'big' 'massive')
+  for size in ('small' 'medium' 'large' 'big')
     &.{size}
       btn-size(size)
 
@@ -44,7 +43,7 @@
         btn-color(clr)
         btn-background-hover(clr)
   &.labeled
-    padding .5em 1.8em .5em 4.2em
+    padding-left 4.2em
     i
       absolute top left
       width 2.8rem
@@ -52,15 +51,15 @@
       text-align center
       color #fff
       height 100%
-      font-size 1rem
-      line-height em-height
+      line-height 2.7
     &.labeled-right
-      padding .5em 4.2rem .5em 1.8rem
+      padding-left 1.8em
+      padding-right 4.2em
       i
         absolute top right
         left auto
   &.icon
-    padding 0 0.8275rem
+    padding auto 0.8275rem
   &:hover
     color hover-text-button-default
     background-color hover-background-light-grey
