--- a/src/styl/modules/code.styl
+++ b/src/styl/modules/code.styl
@@ -1,11 +1,11 @@
 code
-  background-color background-lightest-grey
+  background-color background-code-grey
   color color-primary
   padding .3rem .5rem
   border-radius border-radius-normal
   font-family font-family-code
   line-height 1.6rem
-  font-size .8rem
+  font-size font-size-code
   font-weight 500
 
 p
@@ -14,4 +14,5 @@ p
 
 .message
   code
-    background-color rgba(15, 45, 76, 0.03)
+    background-color transparent
+    border 1px solid border-grey
