--- a/src/styl/modules/comments.styl
+++ b/src/styl/modules/comments.styl
@@ -24,7 +24,7 @@
       margin-left 3.4rem
       .actions
         display block
-        font-size .875rem
+        font-size font-size-small
         margin-top .63rem
         .action
           display inline-block
@@ -37,12 +37,12 @@
           &:hover
             color light-link-hover
       .meta
-        font-size .875rem
-        color text-lightest-grey
+        font-size font-size-small
+        color text-default
         margin-left .6rem
       .creator
         font-weight 600
-        color text-grey !important
+        color color-heading
         line-height 1.62rem
         &:hover
           color primary-color
