--- a/src/styl/modules/divider.styl
+++ b/src/styl/modules/divider.styl
@@ -1,6 +1,6 @@
 .divider
   margin 1rem 0
-  color text-grey
+  color text-default
   font-size font-size-standard
   text-align center
   &:not(.vertical):not(.horizontal)
