--- a/src/styl/modules/dropdowns.styl
+++ b/src/styl/modules/dropdowns.styl
@@ -10,6 +10,7 @@
     cursor pointer
     &:not(.button) > i
       margin 0 .2rem
+      font-size font-size-small
   &.floating
     .menu
       margin-top 1rem
@@ -36,15 +37,15 @@
       pointer-events none
       cursor default
     &.header
-      color text-grey
+      color text-default
       padding 0.5rem 1.4rem 0.5rem 1.4rem
-      font-size 1rem
+      font-size font-size-standard
       font-weight 500
     &:hover
       a
         color color-primary
     a
-      color text-grey
+      color text-default
       display block
       padding 0.25rem 1.4rem
       line-height 1.6em
