--- a/src/styl/modules/list.styl
+++ b/src/styl/modules/list.styl
@@ -23,8 +23,8 @@ ul.list, ol.list
       line-height 1.15rem
     .icon
       &.large
-        font-size 1.6rem
-        line-height 1.4rem
+        font-size font-size-h6
+        line-height 2rem
       display inline-block
       vertical-align middle !important
       margin-right 12px
