--- a/src/styl/modules/loader.styl
+++ b/src/styl/modules/loader.styl
@@ -20,4 +20,4 @@
     height 5rem
   &.dark
     border-color rgba(0, 0, 0, 0.2)
-    border-left-color text-grey
+    border-left-color text-default
