--- a/src/styl/modules/menus.styl
+++ b/src/styl/modules/menus.styl
@@ -44,7 +44,7 @@
     display inline-block
     position relative
     padding .65rem 1.4rem
-    color text-grey
+    color text-default
     cursor pointer
     line-height 1.4rem
     font-weight 500
@@ -70,8 +70,8 @@
       padding .85rem 1.14rem
       color link-light
       &.active
-        border-bottom 2px text-grey solid
-        color text-grey
+        border-bottom 2px text-default solid
+        color text-default
     &.vertical
       &.show
         border 0
@@ -92,7 +92,7 @@
         &.active
           border 0
           &:after
-            background-color text-grey
+            background-color text-default
   &.pills
     .item
       border-radius border-radius-normal
@@ -111,4 +111,4 @@
       &:hover
         color link-light-hover
       &.active
-        color text-grey
+        color text-default
