--- a/src/styl/modules/message.styl
+++ b/src/styl/modules/message.styl
@@ -3,21 +3,19 @@
   background-color #fff
   border 0
   border-left 6px solid border-grey
-  border-radius 4px
+  border-radius border-radius-normal
   margin 1rem 0
   background-color background-lightest-grey
+  color text-default
   h6
     line-height 1.2em
     margin-bottom .2rem
+    color color-heading
   &.warning
     border-color border-warning
-    color text-warning
   &.important
     border-color border-important
-    color text-important
   &.success
     border-color border-success
-    color text-success
   &.info
     border-color border-info
-    color text-info
