--- a/src/styl/modules/ui.styl
+++ b/src/styl/modules/ui.styl
@@ -10,7 +10,9 @@ html
 body
   font-family font-family-standard
   font-size font-size-standard
-  color text-grey
+  -webkit-font-smoothing antialiased
+  -moz-osx-font-smoothing grayscale
+  color text-default
   height 100%
   width 100%
   margin 0
@@ -37,6 +39,7 @@ a
 
 p
   line-height 1.6em
+  color text-default
 
 b, strong, .strong
   font-weight 600
