--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -1,6 +1,7 @@
 //Typography
 font-size-hero = 1.2em
-font-size-small = .86em
+font-size-small = .86rem
+font-size-code = .8rem
 font-size-standard = 16px
 font-size-h1 = 3.8em
 font-size-h2 = 2.4em
@@ -34,20 +35,18 @@ color-primary = primary-color
 color-ash = #6b6c6e
 color-smoke = #e3e7eb
 
-background-info = lighten(color-blue, 92%)
-background-warning = lighten(color-yellow, 92%)
-background-important = lighten(color-red, 92%)
-background-success = lighten(color-green, 92%)
-
 background-light-grey = lighten(color-smoke, 20%)
 background-lighter-grey = lighten(color-smoke, 60%)
 background-lightest-grey = lighten(color-smoke, 75%)
+background-code-grey = #f3f7fc
 
-border-grey = color-smoke
 border-info = lighten(color-blue, 10%)
 border-warning = lighten(color-yellow, 10%)
 border-important = lighten(color-red, 10%)
 border-success = lighten(color-green, 10%)
+
+border-grey = color-smoke
+box-shadow-grey = rgba(38,38,40,.15)
 
 text-button-primary = primary-white
 text-button-red = primary-white
@@ -63,35 +62,33 @@ text-button-brown = primary-white
 text-button-grey = primary-white
 text-button-black = primary-white
 text-button-default = darken(color-grey, 20%)
-
 hover-text-button-default = darken(color-grey, 40%)
 
 link-light = lighten(color-grey, 15%)
 link-light-hover = darken(color-grey, 20%)
 
-text-grey = darken(color-grey, 28%)
-text-info = darken(color-blue, 65%)
-text-warning = darken(color-yellow, 65%)
-text-important = darken(color-red, 65%)
-text-success = darken(color-green, 65%)
+text-default = color-grey
 text-code = primary-black
 
-box-shadow-grey = rgba(38,38,40,.15)
 
 //Identifiers
 border-radius-normal = 4px
-em-height = 2.8em
+em-height = 2.8rem
 
 //Page
 standard-page-width = 1124px
 standard-page-padding = 1rem
 
 //Button size
-button-small = 0.8em
-button-medium = 1.2em
-button-large = 1.34em
-button-big = 1.5em
-button-massive = 1.64em
+button-small-fontsize = 0.8em
+button-medium-fontsize = 1.2em
+button-large-fontsize = 1.34em
+button-big-fontsize = 1.5em
+
+button-small-padding = .65em 1.8em
+button-medium-padding = .75em 1.8em
+button-large-padding = .85em 2em
+button-big-padding = .95em 2.2em
 
 //Image size
 image-mini = 35px
