--- a/src/styl/modules/cards.styl
+++ b/src/styl/modules/cards.styl
@@ -31,23 +31,22 @@
       content ''
       clear both
     .header
-      font-size 1.3rem
-      line-height 1.7rem
+      font-size font-size-h5
+      line-height 1.6
     .sub
-      line-height 1.7rem
-      color color-light-grey
+      line-height 1.3
+      color text-default
+      font-weight 500
     p
       margin-top .7rem
-      color color-light-grey
     &.footer
       flex-grow 0
       span(1/1)
       padding 1rem 1.4rem
-      color color-light-grey
       border-top 1px solid lighten(border-grey, 25%)
       font-size font-size-small
       &.button
-        padding 0
+        padding .75em 0
         text-align center
         border-radius 0 0 border-radius-normal border-radius-normal
         &:hover
@@ -56,5 +55,5 @@
           box-shadow none !important
       i
         margin-right .5rem
-        font-size 0.84rem
-        color text-grey
+        font-size font-size-small
+        color text-default
