Framework for form elements
Form elements, button states/groups, site changes and cleanup.

--- a/src/styl/modules/code.styl
+++ b/src/styl/modules/code.styl
@@ -1,5 +1,5 @@
 code
-  background-color background-code-grey
+  background-color background-lighter-grey
   color color-primary
   padding .3rem .5rem
   border-radius border-radius-normal
