--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -36,9 +36,8 @@ color-ash = #6b6c6e
 color-smoke = #e3e7eb
 
 background-light-grey = lighten(color-smoke, 20%)
-background-lighter-grey = lighten(color-smoke, 60%)
-background-lightest-grey = lighten(color-smoke, 75%)
-background-code-grey = #f3f7fc
+background-lighter-grey = #f5f7fa
+background-lightest-grey = lighten(background-lighter-grey, 25%)
 
 border-info = lighten(color-blue, 10%)
 border-warning = lighten(color-yellow, 10%)
@@ -61,15 +60,12 @@ text-button-pink = primary-white
 text-button-brown = primary-white
 text-button-grey = primary-white
 text-button-black = primary-white
-text-button-default = darken(color-grey, 20%)
-hover-text-button-default = darken(color-grey, 40%)
 
 link-light = lighten(color-grey, 15%)
 link-light-hover = darken(color-grey, 20%)
 
 text-default = color-grey
 text-code = primary-black
-
 
 //Identifiers
 border-radius-normal = 4px
