--- a/src/styl/modules/buttons.styl
+++ b/src/styl/modules/buttons.styl
@@ -1,9 +1,8 @@
 .button
   display inline-block
   position relative
-  overflow hidden
   border-radius border-radius-normal
-  color text-button-default
+  color text-default
   background-color background-light-grey
   outline 0
   padding .75em 1.8em
@@ -61,8 +60,13 @@
   &.icon
     padding auto 0.8275rem
   &:hover
-    color hover-text-button-default
-    background-color hover-background-light-grey
-    box-shadow inset 0 -2px 0 rgba(37,51,66,.14)
-  &:active
-    box-shadow inset 0 2px 0 rgba(37,51,66,.14)
+    color text-default
+    background-color darken(background-light-grey, 4%)
+    text-decoration none
+  .loader
+    height 1.125rem
+    width 1.125rem
+    line-height 1rem
+    border-width .2rem
+    border-color rgba(0, 0, 0, 0.2)
+    border-left-color text-default
