--- a/src/styl/page.styl
+++ b/src/styl/page.styl
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:500")
 @import 'jeet'
 @import 'nib'
 @import 'rupture'
@@ -236,11 +235,9 @@ section.features
     padding 0
     margin-top 2.2rem
   .inner
-    border 1px solid border-grey
     padding 3rem
     border-radius 8px
-    box-shadow -6px 4px 20px 3px rgba(34,36,38,0.05)
-    background-color #fff
+    background-color #F9FBFC
     +below('m')
       padding 2.4rem
   h4
@@ -305,8 +302,10 @@ section.features
 .show-tables > .table
   margin 20px 0
 
-.show-input > .input
-  margin 10px 0
+.inputs
+  .input
+    & + .input
+      margin-top 1.5rem
 
 .show-cards
   margin 12px 0
@@ -472,7 +471,6 @@ section.features
       text-align center
       margin 0
       color text-default
-      background-color background-lighter-grey
       border-radius 0
   .circle
     border-radius 50%
@@ -565,6 +563,7 @@ section.features
       font-weight 500
       display block
       line-height 1.3rem
+      color #fff
     span
       margin .4rem 0 0 0
       color #fff
@@ -578,6 +577,9 @@ section.features
 .breakpoints .module
   p + p
       margin-top 8px
+
+.group + .group
+  margin-top 1.8rem
 
 .module
   transition all 100ms cubic-bezier(0.16, 0.86, 0.44, 1)
