--- a/src/styl/modules/helpers.styl
+++ b/src/styl/modules/helpers.styl
@@ -47,6 +47,10 @@
 .borderless
   border 0 !important
 
+.disabled, [disabled]
+  cursor default
+  pointer-events none
+
 .centered
   &:not(.vertical):not(.horizontal)
     align(both)
