--- a/src/styl/modules/input.styl
+++ b/src/styl/modules/input.styl
@@ -3,9 +3,8 @@
   font-size 0
   font-style normal
   input[disabled], &.disabled
+    @extends .disabled
     opacity .45
-    cursor default
-    pointer-events none
   input, textarea
     font-family font-family-standard
     font-size font-size-standard
