--- a/src/styl/modules/list.styl
+++ b/src/styl/modules/list.styl
@@ -48,6 +48,7 @@ ul.list, ol.list
         font-weight 500
       &:hover
         color link-light-hover
+        text-decoration none
       &.active
         a
           color color-primary
