--- a/src/styl/modules/mixins.styl
+++ b/src/styl/modules/mixins.styl
@@ -60,6 +60,9 @@ btn-size(c)
 btn-color(c)
   color lookup('text-button-' + c)
 
+btn-disabled-color(c)
+  color lighten(lookup('color-' + c), 85%)
+
 btn-color-outlined(c)
   color lookup('color-' + c)
 
