--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -60,6 +60,7 @@ text-button-pink = primary-white
 text-button-brown = primary-white
 text-button-grey = primary-white
 text-button-black = primary-white
+text-button-white = text-default
 
 link-light = lighten(color-grey, 15%)
 link-light-hover = darken(color-grey, 20%)
@@ -76,10 +77,10 @@ standard-page-width = 1124px
 standard-page-padding = 1rem
 
 //Button size
-button-small-fontsize = 0.8em
-button-medium-fontsize = 1.2em
-button-large-fontsize = 1.34em
-button-big-fontsize = 1.5em
+button-small-fontsize = 0.86rem
+button-medium-fontsize = 1.2rem
+button-large-fontsize = 1.34rem
+button-big-fontsize = 1.5rem
 
 button-small-padding = .65em 1.8em
 button-medium-padding = .75em 1.8em
