--- a/src/styl/modules/loader.styl
+++ b/src/styl/modules/loader.styl
@@ -1,8 +1,8 @@
 .loader
   border-style solid
   border-width .5rem
-  border-color rgba(255, 255, 255, 0.2)
-  border-left-color #ffffff
+  border-color transparentify(#ffffff, 60%)
+  border-left-color transparent
   width 5rem
   height 5rem
   border-radius 50%
@@ -19,5 +19,5 @@
     width 5rem
     height 5rem
   &.dark
-    border-color rgba(0, 0, 0, 0.2)
-    border-left-color text-default
+    border-color transparentify(text-default, 40%)
+    border-left-color transparent
