--- a/src/styl/modules/menus.styl
+++ b/src/styl/modules/menus.styl
@@ -48,6 +48,8 @@
     cursor pointer
     line-height 1.4rem
     font-weight 500
+    &:hover
+      text-decoration none
     .label
       padding 0.4rem 0.5rem
       margin -0.4rem 0
