--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -22,7 +22,7 @@ color-heading = #1c2a40
 color-red = #ff2d2d
 color-orange = #ff8f17
 color-yellow = #ffbd00
-color-green = #01bc67
+color-green = #12d057
 color-teal = #00b1a1
 color-blue = #1d7aff
 color-violet = #af00e8
