Added 3 new animations
Added pulse, shake and swing animations. Some content changes to landing page.

--- a/src/styl/modules/buttons.styl
+++ b/src/styl/modules/buttons.styl
@@ -71,6 +71,7 @@
     color lighten(text-default, 35%)
   &.loading
     @extends .disabled
+    color lighten(text-default, 35%)
     .loader
       height 1.125em
       width 1.125em
