--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -105,6 +105,7 @@ duration-l = .3s
 duration-xl = .5s
 duration-xxl = .8s
 duration-xxxl = 1.2s
+duration-xxxxl = 2s
 
 //Grids
 grid-padding = 15px
