Disabled state for all inputs
Disabled state for all types of inputs. Changes to some content and added text disabled variable.

--- a/src/styl/modules/buttons.styl
+++ b/src/styl/modules/buttons.styl
@@ -68,10 +68,10 @@
     text-decoration none
   &.disabled, &[disabled]
     @extends .disabled
-    color lighten(text-default, 35%)
+    color text-disabled
   &.loading
     @extends .disabled
-    color lighten(text-default, 35%)
+    color text-disabled
     .loader
       height 1.125em
       width 1.125em
