--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -19,6 +19,7 @@ primary-white = #fff
 primary-black = #000
 
 color-heading = #1c2a40
+
 color-red = #ff2d2d
 color-orange = #ff8f17
 color-yellow = #ffbd00
@@ -62,11 +63,12 @@ text-button-grey = primary-white
 text-button-black = primary-white
 text-button-white = text-default
 
+text-default = color-grey
+text-disabled = lighten(text-default, 35%)
+text-code = primary-black
+
 link-light = lighten(color-grey, 15%)
 link-light-hover = darken(color-grey, 20%)
-
-text-default = color-grey
-text-code = primary-black
 
 //Identifiers
 border-radius-normal = 4px
