--- a/src/styl/modules/helpers.styl
+++ b/src/styl/modules/helpers.styl
@@ -48,8 +48,10 @@
   border 0 !important
 
 .disabled, [disabled]
-  cursor default
-  pointer-events none
+  cursor not-allowed
+  & > *
+    pointer-events none
+    color text-disabled !important
 
 .centered
   &:not(.vertical):not(.horizontal)
