--- a/src/styl/page.styl
+++ b/src/styl/page.styl
@@ -15,6 +15,21 @@
   border-radius 0 !important
   text-align center
 
+.dimmed
+  absolute top left
+  height 100%
+  width 100%
+  z-index 800
+  content ' '
+  background-color rgba(0,0,0,.5)
+  display block
+  border-radius border-radius-normal
+  &.inverted
+    background-color rgba(255,255,255,.5)
+  .loader
+    z-index 900
+    display block
+
 .main-content
   padding-bottom 80px
   +below('m')
