Added tooltips. Changes to filenames
Added tooltip elements. Changes to filenames to be plural convention. Fixed disabled button visible state.

--- a/src/styl/modules/forms.styl
+++ b/src/styl/modules/forms.styl
@@ -130,7 +130,8 @@
       @extends .disabled
       input[type=range]
         &::-webkit-slider-thumb
-          background-color text-disabled
+          border 3px solid background-light-grey
+          background-color #fff
 
 .action
   input
