--- a/src/styl/modules/buttons.styl
+++ b/src/styl/modules/buttons.styl
@@ -17,7 +17,6 @@
   for size in ('small' 'medium' 'large' 'big')
     &.{size}
       btn-size(size)
-
   &.outlined
     box-sizing border-box
     background-color transparent
@@ -36,6 +35,7 @@
       btn-color(clr)
       btn-background(clr)
       &.disabled, &[disabled], &.loading
+        pointer-events none
         btn-disabled-color(clr)
       &.outlined
         btn-color-outlined(clr)
@@ -72,6 +72,8 @@
   &.loading
     @extends .disabled
     color text-disabled
+    span
+      color inherit !important
     .loader
       height 1.125em
       width 1.125em
